fix: Logo stay visible when flip back on FireFox

--- a/main.css
+++ b/main.css
@@ -63,6 +63,11 @@ h1 {
     height: 10rem;
     transition: all 0.6s ease;
     transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 .front,
